# sd-desktop

./: bun.lockb  index.html  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/sd_commands/: appointment.rs  clients.rs  mod.rs
src/components/: Dashboard.tsx  Main.tsx  Table.tsx
src/components/appointments/: Appointments.tsx
src/components/client/: ClientInformation.tsx
src/components/dashboard/: Dashboard.tsx
src/components/table/: Table.scss  Table.tsx
src/services/appointments/: AppointmentTypes.ts  Appointments.ts
src/state/: ClientInformationState.tsx  PageState.tsx
src/tests/: appointment.test.ts
